--- a/RecipePage.xaml
+++ b/RecipePage.xaml
@@ -29,7 +29,7 @@
             </ListView.ItemTemplate>
         </ListView>
 
-        <Button Text="Add/Choose Item to buy" MaximumWidthRequest="300"
+        <Button Text="Add ingredients" MaximumWidthRequest="300"
 Clicked="OnChooseButtonClicked"/>
     </StackLayout>
 </ContentPage>
