--- a/RestaurantPage.xaml
+++ b/RestaurantPage.xaml
@@ -21,7 +21,7 @@
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-                <Button Text="Save Shop" Grid.Column="0"
+                <Button Text="Save Recipe" Grid.Column="0"
 MaximumWidthRequest="200"
  Clicked="OnSaveButtonClicked" />
                 <Button Text="Show on Map" Grid.Column="1"
