--- a/IngredientPage.xaml
+++ b/IngredientPage.xaml
@@ -6,8 +6,8 @@
     <ContentPage.Content>
         <StackLayout Margin="20">
             <Editor Placeholder="Enter product name" Margin="20"
- Text="{Binding Description}"
- HeightRequest="50" />
+        Text="{Binding Description, Mode=TwoWay}"
+        HeightRequest="50" />
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
@@ -20,6 +20,7 @@
                 </Grid.ColumnDefinitions>
                 <Button Text="Save Ingredient" MaximumWidthRequest="200"
  Clicked="OnSaveButtonClicked" />
+                <Button Grid.Column="1" Text="Delete Ingredient" MaximumWidthRequest="200" Clicked="OnDeleteButtonClicked"/>
 
                 <ListView Grid.Row="1" Grid.Column="0" x:Name="listView"
  Margin="20" IsRefreshing="True" >
